--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -28,7 +28,7 @@
     }
 
     &::after {
-      content: '<h1/>';
+      content: '</h1>';
       font-family: 'La Belle Aurore';
       color: #ffd700;
       font-size: 18px;
@@ -41,7 +41,7 @@
 
     img {
       width: 32px;
-      margin-left: 20px;
+      margin-left: 18px;
       opacity: 0;
       height: auto;
       animation: rotateIn 1s linear both;
